--- a/CargaSaldoQR/src/app/pages/home/home.page.html
+++ b/CargaSaldoQR/src/app/pages/home/home.page.html
@@ -7,12 +7,20 @@
 <ion-content>
   <ion-card color="primary">
     <ion-card-header>
-      <ion-card-subtitle>Saldo disponible:</ion-card-subtitle>
+
+      <ion-row>
+        <ion-col size="8" size-lg>
+          <ion-card-subtitle>Saldo disponible:</ion-card-subtitle>
+        </ion-col>
+        <ion-col size="4" size-lg style="padding-top: 0%;">
+          <ion-chip style="margin-top: 0%;" (click)="clean()">
+            <ion-icon name="trash-outline"></ion-icon>
+            <ion-label>Limpiar</ion-label>
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+
       <br>
-
-      <!-- <ion-text color="dark" *ngIf="credit?.credit"><h1><b>${{credit?.credit}}</b></h1></ion-text>
-    <ion-text color="dark" *ngIf="!credit?.credit"><h1><b>$0</b></h1></ion-text> -->
-
       <div *ngIf="credit?.credit; else noCredit">
         <ion-card-title class="price">$ {{credit?.credit}}</ion-card-title>
       </div>
