--- a/CargaSaldoQR/src/app/pages/login/login.page.html
+++ b/CargaSaldoQR/src/app/pages/login/login.page.html
@@ -31,6 +31,12 @@
         <div class="group">
           <ion-button shape="round" type="submit" [disabled]="!form.valid">Ingresar</ion-button>
         </div>
+
+        <div class="defaultUsers">
+          <ion-chip color="warning" *ngFor="let user of defaultUsers" (click)="onSubmitLogin(user)">
+            <ion-label color="light">{{user.email}}</ion-label>
+          </ion-chip>
+        </div>
       </form>
     </div>
   </div>
