--- a/RelevamientoVisual/src/app/components/slide/slide.component.scss
+++ b/RelevamientoVisual/src/app/components/slide/slide.component.scss
@@ -1,8 +1,34 @@
-.thumb{
-    font-size: 72px;
-    margin: 10px;
+.top-left {
+    position: absolute;
+    top: 11px;
+    left: 18px;
+    font-size: 18px;
+    color: yellow;
 }
 
-.refresh{    
-    font-size: 48px;
+.card {
+    padding-bottom: 10px;
+}
+
+ion-slides {
+    --bullet-background: red;
+    --bullet-background-active: #ffce00;
+    margin-top: 10%;
+}
+
+ion-slide {
+    margin-bottom: -10px;
+}
+
+ion-card-title {
+    margin-top: 0;
+}
+
+.btn-vote {
+    position: fixed;
+}
+
+ion-item {
+    margin-left: 15%;
+    margin-right: 15%;
 }
